# streamlit-state-manager

./: README.md  pyproject.toml
.github/workflows/: prepare-release.yml  publish.yml
docs/examples/: example_basic.py  example_multi_page_app.py  example_using_namespaces.py
streamlit_state_manager/: __init__.py  manager.py  managers.py
